--- a/microservice-dev.properties
+++ b/microservice-dev.properties
@@ -1,5 +1,5 @@
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true333333
+jdbc.url=jdbc:mysql://127.0.0.1:3333/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=root
